Revision history for {{$dist->name}}

{{$NEXT}}
          - implement Releaser role so as to not force the use of another
            Releaser plugin

0.001     2014-05-03 22:56:37Z
          - Initial release, split out from
            Dist-Zilla-PluginBundle-Author-ETHER.